Fixes everything shifting up by 1px when $.dropDown is open in Chrome.

--- a/tool-ui/src/main/webapp/style/jquery.dropdown.less
+++ b/tool-ui/src/main/webapp/style/jquery.dropdown.less
@@ -28,6 +28,7 @@
 input[type="text"].dropDown-search {
     .text;
 
+    overflow: hidden;
     width: 100%;
 }
 
